syntax = "proto3";

package hello;

option go_package = "github.com/wings/pb/hello";
import "google/api/annotations.proto";

service HelloService {
    rpc SayHello(HelloRequest) returns(HelloResponse){
        option (google.api.http) = {
            post: "/v1/wings/hello"
            body: "*"
        };
    }
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message =1;
}